# localbatch

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/corral/: __main__.py  runner.py  server.py  store.py
src/localbatch/: __main__.py  runner.py  server.py  store.py
