[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corral"
version = "0.1.0"
description = "Local AWS Batch emulator for integration testing"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "docker>=6.0.0",
    "click>=8.0.0",
]

[project.scripts]
corral = "corral.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/corral"]
