[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localbatch"
version = "0.2.0"
description = "Local AWS Batch emulator for integration testing"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "docker>=6.0.0",
    "click>=8.0.0",
]

[project.scripts]
localbatch = "localbatch.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "boto3>=1.28",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/localbatch"]
